--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "ru.kaimar20.kotlinOne"
+        applicationId "ru.firstSet.kotlinOne"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
