--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
     testImplementation 'junit:junit:4.13.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -58,4 +59,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
-}
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+   }
