--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'androidx.room:room-runtime:2.2.6'
     testImplementation 'junit:junit:4.13.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -60,4 +61,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-   }
+    annotationProcessor 'androidx.room:room-compiler:2.2.6'
+}
