--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     implementation "org.koin:koin-android:2.2.2"
     implementation "org.koin:koin-android-scope:2.2.2"
     implementation "org.koin:koin-android-viewmodel:2.2.2"
+    implementation "androidx.work:work-runtime-ktx:2.4.0"
 }
