--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,8 @@ android {
 
 dependencies {
     def room_version = "2.2.6"
-    def work_version = "2.4.0"
+    def work_version = "2.5.0"
 
-    implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
@@ -57,11 +56,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-debug:1.4.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
-    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "androidx.fragment:fragment-ktx:1.2.5"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
@@ -72,6 +71,6 @@ dependencies {
     implementation "org.koin:koin-android:2.2.2"
     implementation "org.koin:koin-android-scope:2.2.2"
     implementation "org.koin:koin-android-viewmodel:2.2.2"
-    implementation "androidx.work:work-runtime-ktx:2.4.0"
-    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "androidx.work:work-runtime-ktx:2.5.0"
+    implementation "android.arch.work:work-runtime-ktx:1.0.1"
 }
