--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,8 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:2.2.2"
     implementation "androidx.work:work-runtime-ktx:2.5.0"
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+    testImplementation 'io.mockk:mockk:1.10.0'
+
+
 }
